# PUF_Toolkit

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
PUF_BCH_Decoder/: BCH_Decoder.cpp  BCH_Decoder.h  BCH_Decoder_Calculation.cpp  BCH_Decoder_Calculation.h  BCH_Decoder_File.cpp  BCH_Decoder_File.h  BCH_Decoder_Settings.cpp  BCH_Decoder_Settings.h  BCH_Decoder_View.cpp  BCH_Decoder_View.h  main.cpp
PUF_BCH_Encoder/: BCH_Encoder.cpp  BCH_Encoder.h  BCH_Encoder_Calculation.cpp  BCH_Encoder_Calculation.h  BCH_Encoder_File.cpp  BCH_Encoder_File.h  BCH_Encoder_Settings.cpp  BCH_Encoder_Settings.h  BCH_Encoder_View.cpp  BCH_Encoder_View.h  main.cpp
PUF_Toolkit/: PUF_Calculation.cpp  PUF_Calculation.h  PUF_File.cpp  PUF_File.h  PUF_Settings.cpp  PUF_Settings.h  PUF_Toolkit.cpp  PUF_Toolkit.h  PUF_View.cpp  PUF_View.h  PUF_jni.cpp  PUF_jni.h  README  main.cpp  main.h  readme_code  toolkit.java
